// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SuggestionMenu matches snapshot when empty 1`] = `
<ul
  class="suggestion-menu bp6-menu"
  role="menu"
>
  <li
    class=""
    role="none"
  >
    <a
      aria-disabled="true"
      class="bp6-menu-item bp6-disabled"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="bp6-text-overflow-ellipsis bp6-fill"
      >
        (empty)
      </div>
    </a>
  </li>
</ul>
`;

exports[`SuggestionMenu matches snapshot with something 1`] = `
<ul
  class="suggestion-menu bp6-menu"
  role="menu"
>
  <li
    class=""
    role="none"
  >
    <a
      class="bp6-menu-item bp6-popover-dismiss"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="bp6-text-overflow-ellipsis bp6-fill"
      >
        dog
      </div>
    </a>
  </li>
  <li
    class=""
    role="none"
  >
    <a
      class="bp6-menu-item bp6-popover-dismiss"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="bp6-text-overflow-ellipsis bp6-fill"
      >
        cat
      </div>
    </a>
  </li>
  <li
    class=""
    role="none"
  >
    <a
      class="bp6-menu-item bp6-popover-dismiss"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="bp6-text-overflow-ellipsis bp6-fill"
      >
        skunk
      </div>
    </a>
  </li>
  <li
    class="bp6-submenu"
    role="none"
  >
    <span
      class="bp6-popover-target"
      role="menuitem"
      tabindex="0"
    >
      <a
        aria-haspopup="menu"
        class="bp6-menu-item"
        role="none"
        tabindex="-1"
      >
        <div
          class="bp6-text-overflow-ellipsis bp6-fill"
        >
          Fruit
        </div>
        <span
          class="bp6-icon bp6-icon-caret-right bp6-submenu-icon"
        >
          <svg
            data-icon="caret-right"
          />
        </span>
      </a>
    </span>
    <div
      aria-live="polite"
      class="bp6-overlay bp6-overlay-inline"
    />
  </li>
</ul>
`;
